[package]
name = "khaos-monkey"
version = "0.1.0"
authors = ["Dag <dagbjerreandersen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tokio = {version="1.4.0",features = ["full"]}
structopt = { version = "0.3", default-features = false }
futures = { version = "0.3", default-features = false }
chashmap = "2.2.2"
cadence = "0.29.0" 
either = "1.6.1"
rand = "0.8.4"
humantime = "2.1.0"
log = "0.4.14"
env_logger = "0.10.0" 
